--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "prisma": "^7.2.0",
@@ -20,11 +21,15 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@openai/agents": "^0.3.7",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "chrono-node": "^2.9.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "luxon": "^3.7.2",
     "pg": "^8.16.3",
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "zod": "^3.25.76"
   }
 }
