--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^5.0.6",
     "@types/luxon": "^3.7.1",
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
     "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
@@ -28,6 +29,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "luxon": "^3.7.2",
+    "nodemailer": "^6.9.4",
     "pg": "^8.16.3",
     "playwright": "^1.57.0",
     "zod": "^3.25.76"
