--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@openai/agents-core": "file:C:/Users/soura/OneDrive/Desktop/openai-agents-js/packages/agents-core/openai-agents-core-0.4.0.tgz",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@slack/web-api": "^7.13.0",
     "chrono-node": "^2.9.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -34,6 +35,6 @@
     "nodemailer": "^6.9.4",
     "pg": "^8.16.3",
     "playwright": "^1.57.0",
-    "zod": "^3.25.76"
+    "zod": "^4.0.0"
   }
 }
